# MMS

./: CMakeLists.txt  README.md  build.bat  test.bat
MMS_Library/: CMakeLists.txt
MMS_Library/export_headers/MMS_library/: export.h
MMS_Library/include/: GenericMemoryManager.h  SimpleMemoryManageInstance.h  SophiscatedMMInstance.h
MMS_Library/src/: GenericMemoryManager.cpp  SimpleMemoryManageInstance.cpp  SophiscatedMMInstance.cpp
export_headers/MMS/: export.h
src/: main.cpp
